bookstack-manifest/backend-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bookstack-db
spec:
  serviceName: bookstack-db
  replicas: 1
  selector:
    matchLabels:
      app: bookstack-db
  template:
    metadata:
      labels:
        app: bookstack-db
    spec:
      containers:
        - name: mariadb
          image: lscr.io/linuxserver/mariadb
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: db-volume
              mountPath: /var/lib/mysql
          livenessProbe:
            tcpSocket:
              port: 3306
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            exec:
              command: [ "mysqladmin", "ping", "-h", "localhost" ]
            initialDelaySeconds: 10
            periodSeconds: 5
  volumeClaimTemplates:
    - metadata:
        name: db-volume
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 5Gi
