bookstack-manifest/backend_service.yml
apiVersion: v1
kind: Service
metadata:
  name: bookstack-db
spec:
  selector:
    app: bookstack-db
  ports:
    - port: 3306
      targetPort: 3306
  type: ClusterIP
