bookstack-manifest/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookstack
spec:
  selector:
    app: bookstack
  ports:
    - port: 80
      targetPort: 80
  type: NodePort
